# zcash-android-wallet-sdk

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATIONS.md  PUBLISHING.md  README.md  build-ndk-standalone.bat  build-ndk-standalone.sh  build-rust.bat  build-rust.sh  build.gradle  build.gradle.kts  build.rs  ci.gradle  config.gradle  custom-tasks.gradle  gradle.properties  ktlint.gradle  packages.md  publish.gradle  responsible_disclosure.md  rust-toolchain.toml  settings.gradle  settings.gradle.kts  testing.gradle  versions.properties
backend-lib/: Cargo.toml  build.gradle.kts  proguard-project.txt
backend-lib/src/androidTest/: AndroidManifest.xml
backend-lib/src/main/java/cash/z/ecc/android/sdk/internal/: Backend.kt  Derivation.kt  SdkDispatchers.kt
backend-lib/src/main/proto/: proposal.proto
backend-lib/src/main/rust/: lib.rs  tor.rs  utils.rs
backend-lib/src/main/rust/utils/: exception.rs  target_ndk.rs  trace.rs
sdk-lib/: Cargo.toml  build.gradle  build.gradle.kts  config.gradle  custom-tasks.gradle  lint-baseline.xml  proguard-consumer.txt  proguard-project.txt
sdk-lib/schemas/cash.z.ecc.android.sdk.db.DerivedDataDb/: 5.json  6.json
sdk-lib/schemas/cash.z.ecc.android.sdk.db.PendingTransactionDb/: 1.json
sdk-lib/schemas/cash.z.ecc.android.sdk.internal.db.DerivedDataDb/: 7.json  8.json
sdk-lib/schemas/cash.z.ecc.android.sdk.internal.db.pending.PendingTransactionDb/: 2.json
sdk-lib/schemas/cash.z.wallet.sdk.db.DerivedDataDb/: 3.json  4.json  5.json
sdk-lib/schemas/cash.z.wallet.sdk.db.PendingTransactionDb/: 1.json
sdk-lib/src/androidTest/: AndroidManifest.xml
sdk-lib/src/androidTest/assets/co.electriccoin.zcash/checkpoint/goodnet/: 1300000.json
sdk-lib/src/androidTest/assets/saplingtree/badnet/: 1290000.json
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/: AssetTest.kt  PullRequestSuite.kt  SdkSynchornizerTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/annotation/: MaintainedTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/db/: CommonDatabaseBuilderTest.kt  DatabaseCoordinatorTest.kt  NoBackupContextWrapperTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/ext/: FileExtTest.kt  TestExtensions.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/fixture/: LightWalletEndpointFixture.kt  WalletFixture.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/integration/: SanityTest.kt  SmokeTest.kt  SynchronizerFactoryTest.kt  TestnetIntegrationTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/internal/: CheckpointTest.kt  SaplingParamToolBasicTest.kt  SaplingParamToolIntegrationTest.kt  SaplingParamToolTest.kt  SdkSynchronizerTest.kt  WalletBirthdayTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/jni/: BranchIdTest.kt  TransparentTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/model/: PercentDecimalTest.kt  UnifiedSpendingKeyTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/sample/: ShieldFundsSample.kt  TransparentRestoreSample.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/test/: Global.kt  ScopedTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/tool/: CheckpointToolTest.kt  DerivationToolTest.kt  SaplingParamToolTest.kt  WalletBirthdayToolTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/transaction/: PersistentTransactionManagerTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/util/: AddressGeneratorUtil.kt  BalancePrinterUtil.kt  DarksideTestCoordinator.kt  DataDbScannerUtil.kt  SimpleMnemonics.kt  TestWallet.kt  TransactionCounterUtil.kt
sdk-lib/src/androidTest/java/cash/z/ecc/fixture/: AccountFixture.kt  CheckpointFixture.kt  DatabaseCacheFilesRootFixture.kt  DatabaseNameFixture.kt  DatabasePathFixture.kt  FakeRustBackend.kt  FakeRustBackendFixture.kt  FileBlockRangeFixture.kt  FilePathFixture.kt  SaplingParamToolFixture.kt  SaplingParamsFixture.kt  WalletBirthdayFixture.kt
sdk-lib/src/androidTest/java/cash/z/ecc/preference/: MockPreferenceProvider.kt
sdk-lib/src/androidTest/java/cash/z/ecc/preference/fixture/: BooleanPreferenceDefaultFixture.kt  IntegerPreferenceDefaultFixture.kt  StringDefaultPreferenceFixture.kt
sdk-lib/src/androidTest/java/cash/z/ecc/preference/model/entry/: BooleanPreferenceDefaultTest.kt  IntegerPreferenceDefaultTest.kt  StringPreferenceDefaultTest.kt
sdk-lib/src/main/: AndroidManifest.xml
sdk-lib/src/main/assets/co.electriccoin.zcash/checkpoint/mainnet/: 1752500.json  1755000.json  3157500.json  3160000.json  3162500.json  3165000.json  3167500.json  3170000.json
sdk-lib/src/main/assets/co.electriccoin.zcash/checkpoint/testnet/: 3370000.json  3440000.json  3450000.json  3460000.json  3470000.json  3480000.json  3490000.json  3500000.json  3510000.json  3520000.json  3530000.json  3540000.json  3550000.json  3560000.json  3570000.json  3580000.json  3590000.json  3600000.json  3610000.json  3620000.json  3630000.json  3640000.json  3650000.json  3660000.json  3670000.json  3680000.json  3690000.json  3700000.json  3710000.json  3720000.json  3730000.json
sdk-lib/src/main/assets/saplingtree/mainnet/: 1080000.json  1130000.json  1200000.json  1210000.json  1220000.json  1230000.json  1240000.json  1250000.json  1260000.json  1290000.json  1300000.json  620000.json  630000.json  670000.json  740000.json  750000.json  850000.json
sdk-lib/src/main/assets/saplingtree/testnet/: 1170000.json  1347049.json  1380000.json  1400000.json  1450000.json  1500000.json  1507328.json  280000.json  421720.json  425865.json  518000.json  523240.json  530000.json  540000.json  550000.json  560000.json  570000.json  580000.json  700000.json  750000.json  800000.json  850000.json  950000.json
sdk-lib/src/main/java/cash/z/ecc/android/sdk/: Initializer.kt  SdkSynchronizer.kt  Synchronizer.kt
sdk-lib/src/main/proto/: darkside.proto
sdk-lib/src/main/rust/: lib.rs  local_rpc_types.rs  utils.rs
sdk-lib/src/main/rust/utils/: exception.rs  target_ndk.rs  trace.rs
sdk-lib/src/test/java/cash/z/wallet/: TestUtils.kt
(+1324 files in other folders)
