[package]
name = "zcash-android-wallet-sdk"
version = "0.0.4"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kevin Gorham <kevin.gorham@z.cash>",
]
description = "JNI backend for the Android wallet SDK"
publish = false
edition = "2018"

[dependencies]
android_logger = "0.6"
failure = "0.1"
futures = { version = "0.1", optional = true }
grpc = { version = "0.6", optional = true }
hex = "0.3"
httpbis = { version = "0.7", optional = true }
jni = { version = "0.13", default-features = false }
log = "0.4"
log-panics = "2.0.0"
#protobuf = { version = "2", optional = true }
tls-api = { version = "0.1", optional = true }
tls-api-rustls = { version = "0.1", optional = true }

#### Temporary additions: ####################################
base58 = "0.1.0"
protobuf = "2"
sha2 = "0.8.0"
bs58 = { version = "0.3", features = ["check"] }
hdwallet = "0.2.2"
ripemd160 = "0.8.0"
secp256k1 = "0.17.2"
##############################################################


[dependencies.ff]
git = "https://github.com/zcash/librustzcash.git"
rev = "18b1ce7401184e86031e6d7ddefa7c8d36929296"

[dependencies.pairing]
git = "https://github.com/zcash/librustzcash.git"
rev = "18b1ce7401184e86031e6d7ddefa7c8d36929296"

[dependencies.zcash_client_backend]
git = "https://github.com/zcash/librustzcash.git"
rev = "18b1ce7401184e86031e6d7ddefa7c8d36929296"

[dependencies.zcash_client_sqlite]
git = "https://github.com/zcash/librustzcash.git"
rev = "18b1ce7401184e86031e6d7ddefa7c8d36929296"

[dependencies.zcash_primitives]
git = "https://github.com/zcash/librustzcash.git"
rev = "18b1ce7401184e86031e6d7ddefa7c8d36929296"

[dependencies.zcash_proofs]
git = "https://github.com/zcash/librustzcash.git"
rev = "18b1ce7401184e86031e6d7ddefa7c8d36929296"

[build-dependencies]
protobuf-codegen-pure = "2.14"

#[patch.'https://github.com/zcash/librustzcash.git']
#ff = { path = '../../clones/librustzcash/ff' }
#pairing = { path = '../../clones/librustzcash/pairing' }
#zcash_client_backend = { path = '../../clones/librustzcash/zcash_client_backend' }
#zcash_client_sqlite = { path = '../../clones/librustzcash/zcash_client_sqlite' }
#zcash_primitives = { path = '../../clones/librustzcash/zcash_primitives' }
#zcash_proofs = { path = '../../clones/librustzcash/zcash_proofs' }

[features]
mainnet = ["zcash_client_sqlite/mainnet"]
#updater = ["futures", "grpc", "httpbis", "protobuf", "tls-api", "tls-api-rustls"]

[lib]
name = "zcashwalletsdk"
path = "src/main/rust/lib.rs"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "update-sapling-tree"
path = "src/main/rust/bin/update_sapling_tree.rs"
required-features = ["updater"]
