[package]
name = "zcash-android-wallet-sdk"
version = "0.0.4"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kevin Gorham <kevin.gorham@z.cash>",
]
description = "JNI backend for the Android wallet SDK"
publish = false
edition = "2018"
rust-version = "1.84"

[dependencies]
# Zcash dependencies
orchard = "0.10"
pczt = "0.1"
sapling = { package = "sapling-crypto", version = "0.4", default-features = false }
transparent = { package = "zcash_transparent", version = "0.1", default-features = false }
zcash_address = "0.6"
zcash_client_backend = { version = "0.16", features = [
    "orchard",
    "lightwalletd-tonic-tls-webpki-roots",
    "tor",
    "transparent-inputs",
    "unstable",
    "pczt",
] }
zcash_client_sqlite = { version = "0.14", features = ["orchard", "transparent-inputs", "unstable", "serde"] }
zcash_note_encryption = "0.4.1"
zcash_primitives = "0.21"
zcash_proofs = "0.21"
zcash_protocol = "0.4"
zip32 = "0.1.2"

# Infrastructure
prost = "0.13"
rusqlite = "0.32"
secrecy = "0.8"

# Initialization
rayon = "1.7"

# JNI
anyhow = "1"
jni = { version = "0.21", default-features = false }
uuid = "1"

# lightwalletd
tonic = "0.12"

# Logging
log-panics = "2.0.0"
paranoid-android = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Conditional access to newer NDK features
dlopen2 = "0.7"
libc = "0.2"

# Tor
fs-mistrust = "0.8"
tor-rtcompat = "0.23"
rust_decimal = { version = "1", default-features = false, features = ["c-repr"] }
# - The "static" feature is required for the "compression" default feature of arti-client.
xz2 = { version = "0.1", features = ["static"] }

## Uncomment this to test librustzcash changes locally
#[patch.crates-io]
#transparent = { package = "zcash_transparent", path = '../../clones/librustzcash/zcash_protocol' }
#zcash_address = { path = '../../clones/librustzcash/components/zcash_address' }
#zcash_client_backend = { path = '../../clones/librustzcash/zcash_client_backend' }
#zcash_client_sqlite = { path = '../../clones/librustzcash/zcash_client_sqlite' }
#zcash_primitives = { path = '../../clones/librustzcash/zcash_primitives' }
#zcash_proofs = { path = '../../clones/librustzcash/zcash_proofs' }
#zcash_protocol = { path = '../../clones/librustzcash/zcash_protocol' }

## Uncomment this to test someone else's librustzcash changes in a branch
#[patch.crates-io]
#transparent = { package = "zcash_transparent", git = "https://github.com/zcash/librustzcash", branch = "main" }
#zcash_address = { git = "https://github.com/zcash/librustzcash", branch = "main" }
#zcash_client_backend = { git = "https://github.com/zcash/librustzcash", branch = "main" }
#zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash", branch = "main" }
#zcash_primitives = { git = "https://github.com/zcash/librustzcash", branch = "main" }
#zcash_proofs = { git = "https://github.com/zcash/librustzcash", branch = "main" }
#zcash_protocol = { git = "https://github.com/zcash/librustzcash", branch = "main" }

[patch.crates-io]
orchard = { git = "https://github.com/zcash/orchard.git", rev = "9c59e6c5d04248d3548bca1ce61767e469d946c2" }
pczt = { git = "https://github.com/zcash/librustzcash", rev = "a84f0644e7b2c1ba5635591bde869abcb2921582" }
redjubjub = { git = "https://github.com/ZcashFoundation/redjubjub", rev = "eae848c5c14d9c795d000dd9f4c4762d1aee7ee1" }
sapling = { package = "sapling-crypto", git = "https://github.com/zcash/sapling-crypto.git", rev = "6ca338532912adcd82369220faeea31aab4720c5" }
transparent = { package = "zcash_transparent", git = "https://github.com/zcash/librustzcash", rev = "a84f0644e7b2c1ba5635591bde869abcb2921582" }
zcash_address = { git = "https://github.com/zcash/librustzcash", rev = "a84f0644e7b2c1ba5635591bde869abcb2921582" }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash", rev = "a84f0644e7b2c1ba5635591bde869abcb2921582" }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash", rev = "a84f0644e7b2c1ba5635591bde869abcb2921582" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "a84f0644e7b2c1ba5635591bde869abcb2921582" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash", rev = "a84f0644e7b2c1ba5635591bde869abcb2921582" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "a84f0644e7b2c1ba5635591bde869abcb2921582" }
zcash_spec = { git = "https://github.com/daira/zcash_spec.git", rev = "295ed474426a8c2954a534b0bd72b4f4bf0696d9" }
zip32 = { git = "https://github.com/daira/zip32.git", rev = "fa7805dd7d4c9d37756a0ab1d31f55e97aa57eb4" }

[lib]
name = "zcashwalletsdk"
path = "src/main/rust/lib.rs"
crate-type = ["staticlib", "cdylib"]
