[package]
name = "zcash-android-wallet-sdk"
version = "2.2.10"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kevin Gorham <kevin.gorham@z.cash>",
]
description = "JNI backend for the Android wallet SDK"
publish = false
edition = "2018"
rust-version = "1.84"

[dependencies]
# Zcash dependencies
orchard = "0.11"
pczt = { version = "0.3", features = ["prover", "orchard", "sapling"] }
sapling = { package = "sapling-crypto", version = "0.5", default-features = false }
transparent = { package = "zcash_transparent", version = "0.4", default-features = false }
zcash_address = "0.9"
zcash_client_backend = { version = "0.19", features = [
    "orchard",
    "lightwalletd-tonic-tls-webpki-roots",
    "tor",
    "transparent-inputs",
    "unstable",
    "pczt",
] }
zcash_client_sqlite = { version = "0.17.3", features = ["orchard", "transparent-inputs", "unstable", "serde"] }
zcash_note_encryption = "0.4.1"
zcash_primitives = "0.24"
zcash_proofs = "0.24"
zcash_protocol = "0.6"
zip32 = "0.2"

# Infrastructure
prost = "0.13"
rusqlite = "0.32"
secrecy = "0.8"
rand = "0.8"
nonempty = "0.11"

# HTTP
bytes = "1"
http = "1"
http-body-util = "0.1"

# Initialization
rayon = "1.7"

# JNI
anyhow = "1"
jni = { version = "0.21", default-features = false }
uuid = "1"
bitflags = "2"

# lightwalletd
tonic = "0.13"

# Logging
log-panics = "2.0.0"
paranoid-android = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Conditional access to newer NDK features
dlopen2 = "0.7"
libc = "0.2"

# Tor
fs-mistrust = "0.9"
tor-rtcompat = "0.28"
rust_decimal = { version = "1", default-features = false, features = ["c-repr"] }
# - The "static" feature is required for the "compression" default feature of arti-client.
xz2 = { version = "0.1", features = ["static"] }

## Uncomment this to test librustzcash changes locally
#[patch.crates-io]
#pczt = { package = "pczt", path = '../../clones/librustzcash/pczt' }
#transparent = { package = "zcash_transparent", path = '../../clones/librustzcash/zcash_protocol' }
#zcash_address = { path = '../../clones/librustzcash/components/zcash_address' }
#zcash_client_backend = { path = '../../clones/librustzcash/zcash_client_backend' }
#zcash_client_sqlite = { path = '../../clones/librustzcash/zcash_client_sqlite' }
#zcash_primitives = { path = '../../clones/librustzcash/zcash_primitives' }
#zcash_proofs = { path = '../../clones/librustzcash/zcash_proofs' }
#zcash_protocol = { path = '../../clones/librustzcash/zcash_protocol' }

# Uncomment this to test someone else's librustzcash changes in a branch
[patch.crates-io]
pczt = { git = "https://github.com/zcash/librustzcash.git", rev = "77602375034fe931efbbd6131cc2a77a263b6e6d" }
transparent = { package = "zcash_transparent", git = "https://github.com/zcash/librustzcash.git", rev = "77602375034fe931efbbd6131cc2a77a263b6e6d" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "77602375034fe931efbbd6131cc2a77a263b6e6d" }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash.git", rev = "77602375034fe931efbbd6131cc2a77a263b6e6d" }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash.git", rev = "77602375034fe931efbbd6131cc2a77a263b6e6d" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "77602375034fe931efbbd6131cc2a77a263b6e6d" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git", rev = "77602375034fe931efbbd6131cc2a77a263b6e6d" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "77602375034fe931efbbd6131cc2a77a263b6e6d" }

[lib]
name = "zcashwalletsdk"
path = "src/main/rust/lib.rs"
crate-type = ["staticlib", "cdylib"]
